--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "server=localhost; database=hspa; Integrated Security=SSPI"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
